--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -19,213 +19,11 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
-
-$helperFetchCategory = new Default_View_Helper_CatTitle();
-$helperFetchCatParent = new Default_View_Helper_CatParent();
-//$getAuthUser = new Default_View_Helper_GetAuthUser();
-//$helperBuildMemberUrl = new Default_View_Helper_BuildMemberUrl();
-//$helperImage = new Default_View_Helper_Image();
-$cat_title = $helperFetchCategory->catTitle($this->cat_id);
-$category_id = $this->cat_id;
-$category_id_parent = $helperFetchCatParent->getCatParentId(array('project_category_id' =>  $category_id));
-$cat_title_length = strlen($cat_title);
-//check logo-width:
-$logoWidth = (int)$this->template['header-logo']['width'];
-$cat_title_left = $logoWidth+60;
-$tabs_left = (int)$this->template['header-nav-tabs']['absolute-left'];
-$tabs_left += $cat_title_length*10;
-$idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get('store_category_list') : null;
-$baseurl = Zend_Registry::get('config')->settings->client->default->baseurl;
-$url_forum = Zend_Registry::get('config')->settings->client->default->url_forum;
-$url_blog = Zend_Registry::get('config')->settings->client->default->url_blog;
-
-$helperUserRole = new Backend_View_Helper_UserRole();
-$userRoleName = $helperUserRole->userRole();
-$forum_url_postfix = Zend_Auth::getInstance()->hasIdentity() ? '/session/sso' : '';
 ?>
-    <style>
-
-        header a {
-            color:  <?=$this->template['header-nav-tabs']['link']['color']?>;
-        }
-
-        header div.container.header {
-            background-image: <?=$this->template['header']['background-image']?>;
-            background-color: <?=$this->template['header']['background-color']?>;
-            color: <?=$this->template['header']['color']?>;
-            height: <?=$this->template['header']['height']?>;
-        }
-
-        header .logo-header {
-            background-image: <?=$this->template['header-logo']['background-image']?>;
-            display: block;
-            height: <?=$this->template['header-logo']['height']?>;
-            left: <?=$this->template['header-logo']['left']?>;
-            position: absolute;
-            top: <?=$this->template['header-logo']['top']?>;
-            width: <?=$this->template['header-logo']['width']?>;
-            z-index: 999;
-            overflow: hidden;
-        }
-
-        header ul li:active {
-            background: <?=$this->template['header-nav-tabs']['background-color-active']?> none repeat scroll 0 0;
-        }
-        header ul li:hover {
-            background: <?=$this->template['header-nav-tabs']['background-color-hover']?> none repeat scroll 0 0;
-        }
-
-        header ul li ul li:active {
-            background: <?=$this->template['header-nav-tabs']['background-color-active']?> none repeat scroll 0 0;
-        }
-
-        header ul li ul li:hover {
-            background: <?=$this->template['header-nav-tabs']['background-color-hover']?> none repeat scroll 0 0;
-        }
-        header ul li:active > a {
-            color: <?=$this->template['header-nav-tabs']['link']['color-active']?>;
-        }
-        header ul li:hover > a {
-            color: <?=$this->template['header-nav-tabs']['link']['color-hover']?>;
-        }
-        header ul li ul li:hover a {
-            color: <?=$this->template['header-nav-tabs']['link']['color-hover']?>;
-        }
-
-        ul.menu-nav-tabs li {
-            background-color: <?=$this->template['header-nav-tabs']['background-color']?>;
-            border-color: <?=$this->template['header-nav-tabs']['border-color']?>;
-            border-image: none;
-            border-radius: <?=$this->template['header-nav-tabs']['border-radius']?>;
-            border-style: <?=$this->template['header-nav-tabs']['border-style']?>;
-            border-width: <?=$this->template['header-nav-tabs']['border-with']?>;
-            height: <?=$this->template['header-nav-tabs']['height']?>;
-            line-height: 24px;
-            margin-right: <?=$this->template['header-nav-tabs']['margin-right']?>;
-        }
-    
-        
-        ul.menu-nav-tabs li.active {
-            background: <?=$this->template['header-nav-tabs']['background-color-active']?> none repeat scroll 0 0;
-        }
-
-        .absolute-left {
-            left: <?=$tabs_left?>px;
-        }
-
-        .absolute-right {
-            right: <?=$this->template['header-nav-tabs']['absolute-right']?>;
-        }
-
-        .header_cat_link {
-              bottom: 0; position: absolute; color: blue; font-size: 18pt; left: <?= $cat_title_left ?>px;
-        } 
-    
-        .nav-divider-pling{
-            color:#E2E2E2;
-        }
-        .nav-pills > li + li {
-                margin-left: 10px;
-            }
-            .dropdown-menu > li > a{
-                font-size: 12px;
-            }
-        .metamenu .dropdown:hover .dropdown-menu {
-            margin-left: -16px;
-        }
-        .metamenu .dropdown-menu li{
-            width: 100%;
-        }
-
-        .metamenu ul.dropdown-menu  li span{ color:#999; }
-        .metamenu ul.dropdown-menu  li.active span{ color:#eee; }
-    </style>
-
-    <div class="small metamenu" >   
-        <?php            
-            $domainshelper = new Default_View_Helper_FetchDomains();
-            $this->domainobjects = $domainshelper->fetchDomainObjects();    
-            $sname = Zend_Registry::get('store_host');  
-            $store_config = Zend_Registry::get('store_config');
-                       
-            echo '<ul class="nav nav-pills meta-nav-top left">';
-            $i = 0;
-                        
-            echo '<li class="" style="background-color:#eee; -moz-border-radius: 5px; border-radius: 5px; "><a href="http://'.$baseurl.'"><img src="/images/system/ocs-logo-rounded-16x16.png" class="logo"/> openDesktop.org :</a> </li>';                             
-           
-            $preOrder = 0;
-            $curOrder = 0;
-            foreach ($this->domainobjects as $obj) {
-                $o =  $obj['order'];   
-                //$curOrder = floor($obj['order']/1000);      
-                //if($curOrder<10 or $curOrder>50) continue;
-                $curOrder = $obj['calcOrder'];   
-                $host =$obj['host'];
-                $name =$obj['name'];
-                if($curOrder!= $preOrder) $i=0;
-
-                if($curOrder > $preOrder && $preOrder !=0){
-                   echo '</ul></li>';      
-                }
-                if($i==0 && $preOrder !=0) echo '<li class="nav-divider-pling"> &#149; </li>'; 
-
-                if($curOrder ==9 && $i ==0){
-                    // Desktops
-                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';                                                                  
-                }else if($curOrder==10 && $i==0){
-                    // applications                    
-                    echo '<li class="dropdown"><a href="#">Applications</a><ul class="dropdown-menu">';                                                                 
-                }else if($curOrder ==20 && $i ==0){
-                    // artworks                    
-                    echo '<li class="dropdown"><a href="#">Addons</a><ul class="dropdown-menu">';                                                                  
-                }/*else if($curOrder ==30 && $i ==0){
-                    // artworks                    
-                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';                                                                  
-                }*/
-                else if($curOrder ==40 && $i ==0){
-                    // multimedia                    
-                    echo '<li class="dropdown"><a href="#">Artwork</a><ul class="dropdown-menu">';                                                                  
-                }   
-                else if($curOrder ==50 && $i ==0){
-                    // multimedia                    
-                    echo '<li class="dropdown"><a href="#">Other</a><ul class="dropdown-menu">';                                                                  
-                }               
-                if($sname == $host )
-                {
-                    echo '<li class="active">';
-                }else
-                {
-                    echo '<li>';
-                }
-                /*
-                $keyword = $obj['meta_keywords'];
-
-                if($keyword!='')
-                {
-                    $keyword = ' - '.$keyword;
-                }
-                */
-                 // z.b 150001 ende ==1 go real link otherwise /s/$name 
-                $last_char_check = substr($o, -1);                
-
-                echo '<a href="http://' . ($last_char_check=='1'?$host:$baseurl.'/s/'.$name) . '">'.  $name .'</a> </li>';    
-
-                //$preOrder = floor($obj['order']/1000);  
-                $preOrder =$obj['calcOrder'];  
-                 $i++;                                                  
-            }
-            echo '</ul></li>';   
-            echo '</ul>';                   
-                     
-                ?>
-
-            <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">     
-                <li><a href="/community" > Community </a> </li>        
-               <li><a href="<?=$url_forum?>" target="_blank"> Forum</a> </li>
-               <li><a href="<?=$url_blog?>" target="_blank"> Blog</a> </li>
-               <li><a  id="plingList" href="/plings" class="popuppanel"> What are Plings? </a> </li>             
-               <li><a  id="ocsapiContent" href="/partials/ocsapicontent.phtml" class="popuppanel"> API </a> </li>  
-               <li> <a id="aboutContent" href="/partials/about.phtml" class="popuppanel">About </a>   </li>              
-            </ul>
-        </div>
+<link href="/theme/react/assets/css/metaheader.css" rel="stylesheet">
+<script type="text/javascript" src="/theme/react/lib/react/react.js"></script>
+<script type="text/javascript" src="/theme/react/lib/react-dom/react-dom.js"></script>
+<div id="metaheader"></div>
+<script src="/home/metamenujs?target=opendesktop" ></script>
+<script type="text/javascript" src="/theme/react/metaheader.js"></script>
 
