--- a/application/modules/default/views/layout/layout_appimagehub.phtml
+++ b/application/modules/default/views/layout/layout_appimagehub.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 /**
  *  ocs-webserver
  *
@@ -31,12 +31,12 @@
     <link rel="stylesheet" type="text/css" href="/theme/flatui/js/lib/tooltipster/dist/css/tooltipster.bundle.min.css" />
     <link rel="stylesheet" type="text/css" href="/theme/flatui/js/lib/tooltipster/dist/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-light.min.css" />
     <link rel="stylesheet" type="text/css" href="/theme/flatui/css/tooltipster-light-customized.css" />
-    
+
     <!-- Loading Bootstrap -->
     <link rel="stylesheet" href="/theme/flatui/css/bootstrap/bootstrap.min.css" type="text/css"  crossorigin="anonymous">
-    <link rel="stylesheet" href="/tools/fancybox2.1.4/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />    
+    <link rel="stylesheet" href="/tools/fancybox2.1.4/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />
     <link rel="stylesheet" href="/theme/flatui/css/fontawsome/font-awesome.min.css"  crossorigin="anonymous">
-    
+
     <!-- custom styles -->
     <link href="/theme/flatui/css/flex-layout.css" rel="stylesheet">
     <link href="/theme/flatui/css/style.css" rel="stylesheet">
@@ -44,14 +44,15 @@
 
 
     <link href="/theme/flatui/css/jquery.step.css" rel="stylesheet">
-    
+
 
     <link rel="SHORTCUT ICON" href="<?=$this->template['favicon']?>"/>
 
     <link href="/theme/react/lib/mdl/material.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500" rel="stylesheet">
     <link href="/theme/react/assets/css/style.css" rel="stylesheet">
+    <link href="/theme/react/assets/css/metaheader.css" rel="stylesheet">    
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
@@ -59,7 +60,7 @@
     <![endif]-->
 
     <script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
-    <script src="/theme/flatui/js/lib/bootstrap.min.js" ></script>    
+    <script src="/theme/flatui/js/lib/bootstrap.min.js" ></script>
     <script type="text/javascript" src="/theme/flatui/js/lib/tooltipster/dist/js/tooltipster.bundle.min.js"></script>
 
      <script type="text/javascript" src="/theme/react/lib/react/react.js"></script>
@@ -157,8 +158,8 @@ echo $this->render('partials/propagateLogout.phtml');
         ga('send', 'pageview');
 
     </script>
-    
-    
+
+
     <!-- Piwik -->
     <?php
     $piwikid ='1';
