--- a/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader_react.phtml
@@ -19,52 +19,11 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
-
-
-
-$baseurl = Zend_Registry::get('config')->settings->client->default->baseurl;
-$url_forum = Zend_Registry::get('config')->settings->client->default->url_forum;
-$url_blog = Zend_Registry::get('config')->settings->client->default->url_blog;
-
-$sname = Zend_Registry::get('store_host');
-$json_menu = $this->fetchMetaheaderMenuJson();
-$loginMember = $this->getAuthUser();
-if($loginMember->member_id)
-{
-    $json_user = Zend_Json::encode($loginMember);
-    $username = $loginMember->username;
-    $profile_image_url = $loginMember->profile_image_url;
-    $loginUrl = null;
-}else{
-    $json_user = Zend_Json::encode(null);
-    $username = null;
-    $profile_image_url = null;
-    $serverUrl = $this->serverUrl();
-    $helperEncryptUrl = new Default_View_Helper_EncryptUrl();
-    $redirectString = '/redirect/' . $helperEncryptUrl->EncryptUrl(Zend_Controller_Front::getInstance()->getRequest()->getScheme() . '://' . Zend_Controller_Front::getInstance()->getRequest()->getHttpHost().$_SERVER["REQUEST_URI"]);
-    $loginUrl = $serverUrl.'/login'.(strpos($_SERVER["REQUEST_URI"], 'login')?'':$redirectString);
-}
-
 ?>
-    <style>
-      .nav-divider-pling{color:#E2E2E2;}
-      .nav-pills > li + li {margin-left: 10px;}
-      .dropdown-menu > li > a{font-size: 12px;}
-      .metamenu .dropdown:hover .dropdown-menu {margin-left: -16px;}
-      .metamenu .dropdown-menu li {width: 100%;}
-      .metamenu ul.dropdown-menu  li span{ color:#999; }
-      .metamenu ul.dropdown-menu  li.active span{ color:#eee; }
-    </style>
+<link href="/theme/react/assets/css/metaheader.css" rel="stylesheet">
+<script type="text/javascript" src="/theme/react/lib/react/react.js"></script>
+<script type="text/javascript" src="/theme/react/lib/react-dom/react-dom.js"></script>
+<div id="metaheader"></div>
+<script src="/home/metamenujs?target=opendesktop" ></script>
+<script type="text/javascript" src="/theme/react/metaheader.js"></script>
 
-    <div id="metaheader"></div>
-
-    <script>
-      var domains = <?=$json_menu?>;
-      var user = <?= $json_user ?>;
-      var baseUrl = "<?=$baseurl?>";
-      var blogUrl = "<?=$url_blog?>";
-      var loginUrl = "<?=$loginUrl?>";
-      var sName = "<?=$sname?>";
-    </script>
-
-    <script type="text/javascript" src="/theme/react/metaheader.js"></script>
