--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -206,6 +206,7 @@ body {
               top: 55px;
               right: -250px;
               min-height: 296px;
+              bottom: auto;
 
               &::before {
                 right: 356px;
