--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -262,7 +262,8 @@ body {
             }
           }
 
-          &#discussion-boards {
+          &#discussion-boards,
+          &#more-dropdown-menu {
             position: relative;
             cursor: pointer;
             height: 45px;
