--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -264,7 +264,7 @@ body {
 
           &#discussion-boards,
           &#more-dropdown-menu {
-            
+
             position: relative;
             cursor: pointer;
             height: 45px;
@@ -298,6 +298,16 @@ body {
                   border-radius: 0;
                 }
               }
+            }
+          }
+
+          &#more-dropdown-menu {
+            > a {
+              cursor: pointer;
+            }
+
+            .dropdown-menu {
+              left: -6px;
             }
           }
         }
