--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -262,7 +262,9 @@ body {
             }
           }
 
-          &#discussion-boards {
+          &#discussion-boards,
+          &#more-dropdown-menu {
+
             position: relative;
             cursor: pointer;
             height: 45px;
@@ -296,6 +298,16 @@ body {
                   border-radius: 0;
                 }
               }
+            }
+          }
+
+          &#more-dropdown-menu {
+            > a {
+              cursor: pointer;
+            }
+
+            .dropdown-menu {
+              left: -6px;
             }
           }
         }
