--- a/application/modules/default/views/scripts/home/redirectme.phtml
+++ b/application/modules/default/views/scripts/home/redirectme.phtml
@@ -3,7 +3,7 @@
 <head>
     <script>
         function loadComplete() {
-            document.location.href = "<?= $this->redirect ?>";
+            //document.location.href = "<?= $this->redirect ?>";
         }
 
         function loadForum() {
@@ -44,6 +44,15 @@ if (Zend_Auth::getInstance()->hasIdentity()) {
     $ltat = $sess->openid;
 }
 
+$info = new Default_Model_Info();
+$domains = $info->getActiveStoresForCrossDomainLogin();
+
+
+foreach ($domains as $domain) {
+
+    echo '<img src="'.$domain.'/external/setdata.php?id='.$member->member_id.'&name='.$member->username.'&mail='.$member->mail.'&avatar='.$this->Image($member->profile_image_url,array('width' => 210, 'height' => 210, 'crop' => 2)).'&phash='.$phash.'" height="0" width="0">';
+    
+}
 ?>
 <img src="/external/setdata.php?id=<?= $member->member_id ?>&name=<?= $member->username ?>&mail=<?= $member->mail ?>&avatar=<?= $this->Image($member->profile_image_url,array('width' => 210, 'height' => 210, 'crop' => 2)) ?>&phash=<?= $phash ?>" height="0" width="0">
 <img src="<?= $url_gitlab ?>/external/setdata.php?id=<?= $member->member_id ?>&name=<?= $member->username ?>&mail=<?= $member->mail ?>&avatar=<?= $this->Image($member->profile_image_url,array('width' => 210, 'height' => 210, 'crop' => 2)) ?>&phash=<?= $phash ?>" height="0" width="0">
