--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -195,7 +195,7 @@ body {
             height: 45px;
             z-index: 1000;
 
-            &:hover {
+            &.open {
               .dropdown-menu {
                 display: block;
               }
@@ -270,7 +270,7 @@ body {
             height: 45px;
             z-index: 1000;
 
-            &:hover {
+            &.open {
               .dropdown-menu {
                 display: block;
               }
