--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -167,6 +167,7 @@ body {
 
           > a {
             margin: 0 10px 0 5px;
+            cursor: pointer;
           }
 
           &::after {
@@ -202,7 +203,7 @@ body {
 
             .dropdown-menu {
               width: 400px;
-              top: 45px; 
+              top: 45px;
               right: -260px;
               min-height: 296px;
               bottom: auto;
