--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -167,6 +167,7 @@ body {
 
           > a {
             margin: 0 10px 0 5px;
+            cursor: pointer;
           }
 
           &::after {
@@ -192,10 +193,9 @@ body {
           &#domains-dropdown-menu {
             position: relative;
             cursor: pointer;
-            height: 45px;
             z-index: 1000;
 
-            &:hover {
+            &.open {
               .dropdown-menu {
                 display: block;
               }
@@ -203,8 +203,8 @@ body {
 
             .dropdown-menu {
               width: 400px;
-              top: 55px;
-              right: -250px;
+              top: 45px;
+              right: -260px;
               min-height: 296px;
               bottom: auto;
 
@@ -267,10 +267,9 @@ body {
 
             position: relative;
             cursor: pointer;
-            height: 45px;
             z-index: 1000;
 
-            &:hover {
+            &.open {
               .dropdown-menu {
                 display: block;
               }
@@ -278,7 +277,7 @@ body {
 
             .dropdown-menu {
               width: 200px;
-              top: 55px;
+              top: 45px;
               right: -43px;
               min-height: 84px;
 
