--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -683,4 +683,19 @@ body {
       }
     }
   }
+
+  #metaheader-left-mobile {
+    float: left;
+    height: 34px;
+    width: 34px;
+
+    a#menu-toggle-item {
+      cursor: pointer;
+      height: 34px;
+      width: 34px;
+      display: block;
+      float: left;
+      background-image: url('../img/hamburger-menu-icon.jpg');
+    }
+  }
 }
