--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -698,7 +698,7 @@ body {
       width: 34px;
       display: block;
       float: left;
-      background-image: url('../img/hamburger-menu-icon.jpg');
+      background-image: url('../img/hamburger-menu-icon.png');
     }
   }
 }
