--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -698,7 +698,23 @@ body {
       width: 34px;
       display: block;
       float: left;
-      background-image: url('../img/hamburger-menu-icon.png');
+      background-image: url(../img/hamburger-menu-icon.png);
+      background-size: 20px 16px;
+      background-repeat: no-repeat;
+      background-position: center center;
+    }
+
+    #left-side-overlay {
+      position: fixed;
+      width: 0;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: 1001;
+
+      #left-side-panel {
+        height: 100%;
+        width: 90%;
+      }
     }
   }
 }
