--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -713,7 +713,11 @@ body {
 
       #left-side-panel {
         height: 100%;
-        width: 90%;
+        width: 0;
+        background-color: white;
+        -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+        box-shadow: 0 6px 12px rgba(0,0,0,.175);
+        background-color: white;
       }
     }
   }
