--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -710,6 +710,7 @@ body {
       height: 100%;
       background: rgba(0,0,0,0.5);
       z-index: 1001;
+      overflow: hidden;
 
       #left-side-panel {
         height: 100%;
