--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -719,7 +719,21 @@ body {
         -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
         box-shadow: 0 6px 12px rgba(0,0,0,.175);
         background-color: white;
+        overflow: scroll;
+        padding: 10px;
         .transition();
+
+        #panel-header {
+          margin-bottom: 20px;
+        }
+
+        #panel-menu {
+          ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+          }
+        }
       }
     }
 
