--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -728,10 +728,29 @@ body {
         }
 
         #panel-menu {
+          width: 100%;
           ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
+            width: 100%;
+
+            li {
+              width: 100%;
+              float: left;
+              margin-bottom: 10px;
+
+              a {
+                width: 100%;
+                height: 24px;
+                line-height: 24px;
+                display: block;
+              }
+
+              ul {
+                padding-left: 15px;
+              }
+            }
           }
         }
       }
