--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -750,9 +750,10 @@ body {
 
               ul {
                 padding-left: 15px;
+                margin-bottom: 15px;
 
                 li {
-                  margin-bottom: 10px;
+                  margin-bottom: 0;
 
                   a {
 
