--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -734,6 +734,7 @@ body {
             padding: 0;
             margin: 0;
             width: 100%;
+            float: left;
 
             li {
               width: 100%;
