--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -720,11 +720,13 @@ body {
         box-shadow: 0 6px 12px rgba(0,0,0,.175);
         background-color: white;
         overflow: scroll;
-        padding: 10px;
         .transition();
 
         #panel-header {
-          margin-bottom: 20px;
+          background: #efefef;
+          padding: 20px;
+          text-align: center;
+          margin-bottom: 10px;
         }
 
         #panel-menu {
