--- a/application/modules/default/views/layout/layout_appimagehub.phtml
+++ b/application/modules/default/views/layout/layout_appimagehub.phtml
@@ -104,7 +104,7 @@
 
 <?php echo $this->render('partials/genericModalConfirmation.phtml'); ?>
 
-
+<script src="/theme/flatui/js/lib/jquery-3.3.1.min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.colorbox-min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.placeholder.min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.jscrollpane.min.js"></script>
