--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -13,6 +13,9 @@ body {
     #metaheader {
       position: fixed;
     }
+    .nav-sidebar {
+      top:88px;  
+    }
   }
 
   &.navigation-topics {
@@ -751,7 +754,7 @@ body {
               }
 
               ul {
-                padding-left: 15px;
+                padding: 0 10px;
                 margin-bottom: 15px;
 
                 li {
