--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -14,7 +14,7 @@ body {
       position: fixed;
     }
     .nav-sidebar {
-      top:88px;  
+      top:88px;
     }
   }
 
@@ -750,6 +750,8 @@ body {
                 line-height: 24px;
                 display: block;
                 padding: 0 10px;
+                text-decoration: none;
+                color: #6a7686;
                 .transition();
               }
 
