--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -199,7 +199,7 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                     <section>
 
                         <figure class="logo-header">                           
-                           <a href="http://<?php echo $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name ?>">
+                           <a href="<?php echo $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name ?>">
                                 <img width="<?= $this->template['header-logo']['width'] ?>" border="0"
                                      src="<?= $this->template['header-logo']['image-src'] ?>">
                             </a>
