--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -786,6 +786,7 @@ body {
         left: 50%;
         background-color: #efefef;
         z-index: 1003;
+        .transition(0s);
       }
       #left-side-overlay {
         width: 100%;
