--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -198,8 +198,15 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
 
                     <section>
 
-                        <figure class="logo-header">                           
-                           <a href="<?php echo $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name ?>">
+                        <figure class="logo-header">
+                            <?php
+                                $storeUrl = $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name;
+                                if (strpos($storeUrl, 'http') != 0) {
+                                    // It starts not with 'http'
+                                    $storeUrl = 'https://' . $storeUrl;
+                                }
+                            ?>
+                           <a href="<?php echo $storeUrl ?>">
                                 <img width="<?= $this->template['header-logo']['width'] ?>" border="0"
                                      src="<?= $this->template['header-logo']['image-src'] ?>">
                             </a>
