--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -201,7 +201,7 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                         <figure class="logo-header">
                             <?php
                                 $storeUrl = $last_char_store_order=='1'?$sname:$baseurl.'/s/'.$store_name;
-                                if (strpos($storeUrl, 'http') != 0) {
+                                if (strpos($storeUrl, 'http') === false) {
                                     // It starts not with 'http'
                                     $storeUrl = 'https://' . $storeUrl;
                                 }
